--- a/org.eclipse.cdt.cross.arc.gnu/plugin.xml
+++ b/org.eclipse.cdt.cross.arc.gnu/plugin.xml
@@ -2879,6 +2879,26 @@
                name="Atomic functions (-matomic)"
                superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.atomic">
          </option>
+         <tool
+               id="org.eclipse.cdt.cross.arc.gnu.linux.printsize.base"
+               isAbstract="false"
+               name="ARC ELF32 GNU Print Size"
+               superClass="org.eclipse.cdt.cross.arc.gnu.printsize">
+            <enablement
+                  type="ALL">
+               <checkOption
+                     holderId="org.eclipse.cdt.cross.arc.gnu.linux.toolchain.base"
+                     optionId="org.eclipse.cdt.cross.arc.gnu.linux.option.addtools.printsize"
+                     value="true">
+               </checkOption>
+               <and>
+                  <checkBuildProperty
+                        property="org.eclipse.cdt.build.core.buildArtefactType"
+                        value="org.eclipse.cdt.cross.arc.gnu.buildArtefactType.application">
+                  </checkBuildProperty>
+               </and>
+            </enablement>
+         </tool>
 
          <!--
          <option
@@ -2969,11 +2989,6 @@
                      isAbstract="false"
                      superClass="org.eclipse.cdt.cross.arc.gnu.linux.createlisting.base">
                </tool>
-               <tool
-                     id="org.eclipse.cdt.cross.arc.gnu.linux.elf.printsize.debug"
-                     isAbstract="false"
-                     superClass="org.eclipse.cdt.cross.arc.gnu.printsize">
-               </tool>
             </toolChain>
          </configuration>
          <configuration
@@ -3033,11 +3048,6 @@
                      id="org.eclipse.cdt.cross.arc.gnu.linux.elf.createlisting.release"
                      isAbstract="false"
                      superClass="org.eclipse.cdt.cross.arc.gnu.linux.createlisting.base">
-               </tool>
-               <tool
-                     id="org.eclipse.cdt.cross.arc.gnu.linux.elf.printsize.release"
-                     isAbstract="false"
-                     superClass="org.eclipse.cdt.cross.arc.gnu.linux.printsize.base">
                </tool>
             </toolChain>
          </configuration>
@@ -3449,26 +3459,6 @@
                </and>
             </enablement>
          </tool>
-         <tool
-               id="org.eclipse.cdt.cross.arc.gnu.eb.linux.printsize.base"
-               isAbstract="false"
-               name="ARC ELF32 GNU Print Size "
-               superClass="org.eclipse.cdt.cross.arc.gnu.eb.printsize">
-            <enablement
-                  type="ALL">
-               <checkOption
-                     holderId="org.eclipse.cdt.cross.arc.gnu.eb.linux.toolchain.base"
-                     optionId="org.eclipse.cdt.cross.arc.gnu.eb.linux.option.addtools.printsize"
-                     value="true">
-               </checkOption>
-               <and>
-                  <checkBuildProperty
-                        property="org.eclipse.cdt.build.core.buildArtefactType"
-                        value="org.eclipse.cdt.cross.arc.gnu.buildArtefactType.application">
-                  </checkBuildProperty>
-               </and>
-            </enablement>
-         </tool>
          <option
                applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
                category="org.eclipse.cdt.cross.arc.gnu.eb.linux.category.target"
@@ -3518,6 +3508,26 @@
                name="Atomic functions (-matomic)"
                superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.atomic">
          </option>
+         <tool
+               id="org.eclipse.cdt.cross.arc.gnu.eb.linux.printsize.base"
+               isAbstract="false"
+               name="ARC ELF32 GNU Print Size "
+               superClass="org.eclipse.cdt.cross.arc.gnu.eb.printsize">
+            <enablement
+                  type="ALL">
+               <checkOption
+                     holderId="org.eclipse.cdt.cross.arc.gnu.eb.linux.toolchain.base"
+                     optionId="org.eclipse.cdt.cross.arc.gnu.eb.linux.option.addtools.printsize"
+                     value="true">
+               </checkOption>
+               <and>
+                  <checkBuildProperty
+                        property="org.eclipse.cdt.build.core.buildArtefactType"
+                        value="org.eclipse.cdt.cross.arc.gnu.buildArtefactType.application">
+                  </checkBuildProperty>
+               </and>
+            </enablement>
+         </tool>
 
          
          <!--
@@ -3674,11 +3684,6 @@
                      isAbstract="false"
                      superClass="org.eclipse.cdt.cross.arc.gnu.eb.linux.cpp.linker.base">
                </tool>
-               <tool
-                     id="org.eclipse.cdt.cross.arc.gnu.eb.linux.elf.printsize.debug"
-                     isAbstract="false"
-                     superClass="org.eclipse.cdt.cross.arc.gnu.eb.linux.printsize.base">
-               </tool>
             </toolChain>
          </configuration>
          <configuration
@@ -3728,11 +3733,6 @@
                      id="org.eclipse.cdt.cross.arc.gnu.eb.linux.elf.cpp.linker.release"
                      isAbstract="false"
                      superClass="org.eclipse.cdt.cross.arc.gnu.eb.linux.cpp.linker.base">
-               </tool>
-               <tool
-                     id="org.eclipse.cdt.cross.arc.gnu.eb.linux.elf.printsize.release"
-                     isAbstract="false"
-                     superClass="org.eclipse.cdt.cross.arc.gnu.eb.linux.printsize.base">
                </tool>
             </toolChain>
          </configuration>
@@ -3914,7 +3914,7 @@
          </optionCategory>
          <option
                category="org.eclipse.cdt.cross.arc.gnu.linux.category.addtools"
-               id="org.eclipse.cdt.cross.arc.gnu.linux.option.addtools.printsize"
+               id="org.eclipse.cdt.cross.arc.gnu.hs.linux.option.addtools.printsize"
                name="Print Size"
                superClass="org.eclipse.cdt.cross.arc.gnu.base.option.addtools.printsize">
          </option>
@@ -4031,6 +4031,26 @@
                superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.atomic"
                value="true">
          </option>
+         <tool
+               id="org.eclipse.cdt.cross.arc.gnu.hs.linux.printsize.base"
+               isAbstract="false"
+               name="ARC ELF32 GNU Print Size"
+               superClass="org.eclipse.cdt.cross.arc.gnu.printsize">
+            <enablement
+                  type="ALL">
+               <checkOption
+                     holderId="org.eclipse.cdt.cross.arc.gnu.linux.toolchain.base.hs"
+                     optionId="org.eclipse.cdt.cross.arc.gnu.hs.linux.option.addtools.printsize"
+                     value="true">
+               </checkOption>
+               <and>
+                  <checkBuildProperty
+                        property="org.eclipse.cdt.build.core.buildArtefactType"
+                        value="org.eclipse.cdt.cross.arc.gnu.buildArtefactType.application">
+                  </checkBuildProperty>
+               </and>
+            </enablement>
+         </tool>
       </toolChain>
       <projectType
             buildArtefactType="org.eclipse.cdt.cross.arc.gnu.buildArtefactType.application"
@@ -4094,11 +4114,6 @@
                      isAbstract="false"
                      superClass="org.eclipse.cdt.cross.arc.gnu.linux.createlisting.base">
                </tool>
-               <tool
-                     id="org.eclipse.cdt.cross.arc.gnu.hs.linux.elf.printsize.debug"
-                     isAbstract="false"
-                     superClass="org.eclipse.cdt.cross.arc.gnu.printsize">
-               </tool>
             </toolChain>
          </configuration>
          <configuration
@@ -4158,11 +4173,6 @@
                      id="org.eclipse.cdt.cross.arc.gnu.hs.linux.elf.createlisting.release"
                      isAbstract="false"
                      superClass="org.eclipse.cdt.cross.arc.gnu.linux.createlisting.base">
-               </tool>
-               <tool
-                     id="org.eclipse.cdt.cross.arc.gnu.hs.linux.elf.printsize.release"
-                     isAbstract="false"
-                     superClass="org.eclipse.cdt.cross.arc.gnu.linux.printsize.base">
                </tool>
             </toolChain>
          </configuration>
@@ -4361,7 +4371,7 @@
          <tool
                id="org.eclipse.cdt.cross.arc.gnu.600.linux.printsize.base"
                isAbstract="false"
-               name="ARC ELF32  Print Size"
+               name="ARC ELF32 GNU Print Size"
                superClass="org.eclipse.cdt.cross.arc.gnu.printsize">
             <enablement
                   type="ALL">
@@ -5148,7 +5158,7 @@
                superClass="org.eclipse.cdt.cross.arc.gnu.base.option.debugging.gprof">
          </option>
          <optionCategory
-               id="org.eclipse.cdt.cross.arc.gnu.eb.linux.category.addtools"
+               id="org.eclipse.cdt.cross.arc.gnu.hs.eb.linux.category.addtools"
                name="Additional Tools">
          </optionCategory>
          <option
@@ -5162,12 +5172,6 @@
                id="org.eclipse.cdt.cross.arc.gnu.eb.linux.option.addtools.createlisting"
                name="Create Extended Listing"
                superClass="org.eclipse.cdt.cross.arc.gnu.base.option.addtools.createlisting">
-         </option>
-         <option
-               category="org.eclipse.cdt.cross.arc.gnu.eb.linux.category.addtools"
-               id="org.eclipse.cdt.cross.arc.gnu.eb.linux.option.addtools.printsize"
-               name="Print Size"
-               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.addtools.printsize">
          </option>
          <tool
                id="org.eclipse.cdt.cross.arc.gnu.eb.linux.assembler.base"
@@ -5260,26 +5264,6 @@
                </and>
             </enablement>
          </tool>
-         <tool
-               id="org.eclipse.cdt.cross.arc.gnu.hs.eb.linux.printsize.base"
-               isAbstract="false"
-               name="ARC ELF32 GNU Print Size "
-               superClass="org.eclipse.cdt.cross.arc.gnu.eb.printsize">
-            <enablement
-                  type="ALL">
-               <checkOption
-                     holderId="org.eclipse.cdt.cross.arc.gnu.eb.linux.toolchain.base.hs"
-                     optionId="org.eclipse.cdt.cross.arc.gnu.eb.linux.option.addtools.printsize"
-                     value="true">
-               </checkOption>
-               <and>
-                  <checkBuildProperty
-                        property="org.eclipse.cdt.build.core.buildArtefactType"
-                        value="org.eclipse.cdt.cross.arc.gnu.buildArtefactType.application">
-                  </checkBuildProperty>
-               </and>
-            </enablement>
-         </tool>
          <option
                applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
                category="org.eclipse.cdt.cross.arc.gnu.eb.linux.category.target"
@@ -5301,6 +5285,32 @@
                name="Atomic functions (-matomic)"
                superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.atomic"
                value="true">
+         </option>
+         <tool
+               id="org.eclipse.cdt.cross.arc.gnu.hs.eb.linux.printsize.base"
+               isAbstract="false"
+               name="ARC ELF32 GNU Print Size "
+               superClass="org.eclipse.cdt.cross.arc.gnu.eb.printsize">
+            <enablement
+                  type="ALL">
+               <checkOption
+                     holderId="org.eclipse.cdt.cross.arc.gnu.eb.linux.toolchain.base.hs"
+                     optionId="org.eclipse.cdt.cross.arc.gnu.eb.hs.linux.option.addtools.printsize"
+                     value="true">
+               </checkOption>
+               <and>
+                  <checkBuildProperty
+                        property="org.eclipse.cdt.build.core.buildArtefactType"
+                        value="org.eclipse.cdt.cross.arc.gnu.buildArtefactType.application">
+                  </checkBuildProperty>
+               </and>
+            </enablement>
+         </tool>
+         <option
+               category="org.eclipse.cdt.cross.arc.gnu.hs.eb.linux.category.addtools"
+               id="org.eclipse.cdt.cross.arc.gnu.eb.hs.linux.option.addtools.printsize"
+               name="Print Size"
+               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.addtools.printsize">
          </option>
       </toolChain>
       <configuration
@@ -5669,8 +5679,8 @@
                superClass="org.eclipse.cdt.cross.arc.gnu.base.option.addtools.createlisting">
          </option>
          <option
-               category="org.eclipse.cdt.cross.arc.gnu.eb.linux.category.addtools"
-               id="org.eclipse.cdt.cross.arc.gnu.eb.linux.option.addtools.printsize"
+               category="org.eclipse.cdt.cross.arc.gnu.700.eb.linux.category.addtools"
+               id="org.eclipse.cdt.cross.arc.gnu.700.eb.linux.option.addtools.printsize"
                name="Print Size"
                superClass="org.eclipse.cdt.cross.arc.gnu.base.option.addtools.printsize">
          </option>
